feat: add Category service with crud methods and controller with endpoints